Removing unnecessary stuff

--- a/src/components/Dropdown/Dropdown.module.css
+++ b/src/components/Dropdown/Dropdown.module.css
@@ -8,7 +8,8 @@
   z-index: 100;
   width: 225px;
   border-radius: 3px;
-  background: #2f2f2f;
+  /* background: #2f2f2f; */
+  background: #252525;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   animation-name: dropdown;
   animation-duration: 0.2s;
