--- a/src/index.css
+++ b/src/index.css
@@ -275,13 +275,22 @@
     opacity: 1;
   }
 }
-.loader-container {
+.loader-container,
+.error-container {
   height: 100%;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+.error-container div {
+  color: white;
+  text-align: center;
+}
+.error-icon {
+  font-size: 60px;
+}
+
 .container-spinner {
   height: 100px;
   display: flex;
