--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -84,14 +84,14 @@
   flex-wrap: wrap;
 }
 .search-card__genre {
-  background: #1db954;
-  background: rgb(60, 61, 61);
+  background: rgba(212, 211, 211, 0.2);
   border-radius: 5px;
   padding: 5px 10px;
   font-size: 11px;
   margin-right: 10px;
   margin-top: 3px;
   color: white;
+  font-weight: bold;
 }
 .search-card__songs {
   font-size: 14px;
