--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -27,9 +27,9 @@
   width: 30px;
   height: 30px;
   outline: 0;
-  border: 2px solid #989898;
+  border: 2px solid #1db954;
   cursor: pointer;
-  background: black;
+  background: #1db954;
   color: white;
   font-size: 18px;
   position: absolute;
