--- a/src/index.css
+++ b/src/index.css
@@ -327,3 +327,9 @@
   padding: 0;
   margin: 0;
 }
+.ReactVirtualized__Grid__innerScrollContainer {
+  overflow: visible !important;
+}
+.ReactVirtualized__Grid {
+  overflow: visible !important;
+}
