--- a/src/components/Searchbar/Searchbar.module.css
+++ b/src/components/Searchbar/Searchbar.module.css
@@ -6,6 +6,9 @@
   justify-content: center;
   align-items: center;
 }
+.form {
+  flex-basis: 300px;
+}
 .icon {
   width: 40px;
   font-size: 22px;
@@ -27,4 +30,14 @@
 }
 .searchbar-input::placeholder {
   color: #b3b3b3;
+}
+.wrap {
+  display: flex;
+  width: 100%;
+}
+.user {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
