--- a/src/components/Searchbar/Searchbar.module.css
+++ b/src/components/Searchbar/Searchbar.module.css
@@ -41,3 +41,24 @@
   justify-content: flex-end;
   align-items: center;
 }
+.dropdown-btn {
+  border: 3px solid #282828;
+  display: flex;
+  margin-left: 30px;
+  border-radius: 50px;
+  padding: 3px 5px;
+}
+.dropdown-btn img {
+  width: 35px;
+  border-radius: 50%;
+}
+.dropdown-btn div {
+  margin-left: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 600;
+}
+.dropdown-btn .icon {
+  margin-left: 0px;
+}
