following/unfollowing playlists added

--- a/src/components/MusicLibrary/MusicLibrary.module.css
+++ b/src/components/MusicLibrary/MusicLibrary.module.css
@@ -16,6 +16,8 @@
   background-color: darkgrey;
   outline: 1px solid slategrey;
   border-radius: 50px;
+  border: none;
+  outline: none;
 }
 .heading {
   color: white;
