--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -24,7 +24,7 @@
   text-decoration: none;
   color: #b3b3b3;
   font-weight: 700;
-  font-size: 14px;
+  font-size: 0.8rem;
   display: block;
   transition: 0.2s;
 }
