--- a/src/components/Dropdown/Dropdown.module.css
+++ b/src/components/Dropdown/Dropdown.module.css
@@ -6,7 +6,7 @@
   top: 30px;
   left: -190px;
   z-index: 1000;
-  width: 225px;
+  width: 251px;
   border-radius: 3px;
   background: #252525;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
@@ -30,17 +30,23 @@
 }
 .dropdown ul {
   list-style-type: none;
-  padding: 10px;
+  padding: 7px;
 }
 
 .link {
   display: block;
   text-decoration: none;
+  cursor: pointer;
   color: #b3b3b3;
   padding: 8px 15px;
   font-size: 15px;
   border-radius: 3px;
   font-weight: normal;
+  display: flex;
+  align-items: center;
+}
+.link svg {
+  margin-right: 10px;
 }
 .link:hover {
   color: white;
