--- a/src/components/Artist/Artist.module.css
+++ b/src/components/Artist/Artist.module.css
@@ -32,7 +32,7 @@
 .header__image-cotainer img {
   width: 100%;
   display: block;
-  height: auto;
+  height: 100%;
   border-radius: 50%;
 }
 .text {
