--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -234,12 +234,11 @@
   right: 0;
   background: rgba(0, 0, 0, 0.6);
   display: none;
-  cursor: pointer;
 }
 .card__overlay__content {
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   padding: 0px 20px;
 }
@@ -264,11 +263,13 @@
   font-size: 17px;
 }
 .btn--play {
-  border: 2px solid white;
   width: 56px;
   font-size: 30px;
   height: 56px;
-  background: rgba(0, 0, 0, 0.5);
+  border: 2px solid #1db954;
+  cursor: pointer;
+  background: #1db954;
+  color: white;
 }
 
 /* @media (max-width: 1550px) {
