--- a/src/components/Artist/Artist.module.css
+++ b/src/components/Artist/Artist.module.css
@@ -29,6 +29,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 50%;
+  background-size: cover;
 }
 .header__image-cotainer img {
   width: 100%;
