--- a/src/index.css
+++ b/src/index.css
@@ -368,3 +368,46 @@
 .ReactVirtualized__Grid {
   overflow: visible !important;
 } */
+.ReactModal__Overlay {
+  background: rgba(0, 0, 0, 0);
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  z-index: 100;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.3s;
+  transition-timing-function: ease-out;
+}
+.ReactModal__Overlay--after-open {
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.ReactModal__Overlay--before-close {
+  background: rgba(0, 0, 0, 0);
+  transition-delay: 0.2s;
+}
+.ReactModal__Content {
+  z-index: 1000;
+  width: 900px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  outline: none;
+  transition: 0.2s;
+  transform: scale(0);
+}
+.ReactModal__Content--after-open {
+  opacity: 1;
+  transition-delay: 0.2s;
+  transform: scale(1);
+}
+.ReactModal__Content--before-close {
+  opacity: 0;
+  transform: scale(0);
+  transition-delay: 0s;
+}
