--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,10 @@
   transition: background 0.2s, color 0.2s;
   height: 40px;
 }
+.btn:disabled:hover {
+  background: grey;
+  cursor: not-allowed;
+}
 .btn-round,
 .btn-round--liked {
   background: transparent;
