--- a/src/components/Categories/Categories.module.css
+++ b/src/components/Categories/Categories.module.css
@@ -22,3 +22,34 @@
   outline: 0;
   border-radius: 50px;
 }
+.categories {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 25px;
+  width: 100%;
+  margin-top: 40px;
+}
+.category {
+  background: #363636;
+  position: relative;
+}
+.category img {
+  width: 100%;
+  display: block;
+}
+.category__content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: transparent;
+}
+.category__content h2 {
+  color: white;
+  margin-top: 100px;
+}
