--- a/src/components/Categories/Categories.module.css
+++ b/src/components/Categories/Categories.module.css
@@ -33,6 +33,9 @@
   background: #363636;
   position: relative;
 }
+.category:hover h2 {
+  text-decoration: underline;
+}
 .category img {
   width: 100%;
   display: block;
