--- a/src/components/NowPlaying/NowPlaying.module.css
+++ b/src/components/NowPlaying/NowPlaying.module.css
@@ -92,7 +92,8 @@
   transform: translateY(-50%);
   overflow: hidden;
 }
-.progress-bar__slider {
+.progress-bar__slider,
+.progress-bar__slider--show {
   background-color: #fff;
   border: 0;
   position: absolute;
@@ -105,7 +106,10 @@
   transform: translateY(-50%);
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
   opacity: 0;
-  margin-left: -7px;
+  margin-left: -6px;
+}
+.progress-bar__slider--show {
+  opacity: 1;
 }
 .progress-bar__fg {
   transform: translateX(-87.4522%);
