--- a/src/components/NowPlaying/NowPlaying.module.css
+++ b/src/components/NowPlaying/NowPlaying.module.css
@@ -161,3 +161,45 @@
 .volume-bar__icon:hover {
   color: white;
 }
+.img-container {
+  width: 56px;
+  height: 56px;
+  margin-right: 20px;
+}
+.img-container img {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+.song-info {
+  display: flex;
+  align-items: center;
+}
+.song-info__title {
+  color: white;
+  font-size: 14px;
+  text-decoration: none;
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+}
+.song-info__artist {
+  color: #b3b3b3;
+  font-size: 14px;
+  text-decoration: none;
+}
+.song-info__artists {
+  color: #b3b3b3;
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+}
+.song-info__title:hover,
+.song-info__artist:hover {
+  text-decoration: underline;
+  color: white;
+}
