category component improved styling

--- a/src/components/Categories/Categories.module.css
+++ b/src/components/Categories/Categories.module.css
@@ -33,6 +33,7 @@
 .category {
   background: #363636;
   position: relative;
+  padding-bottom: 100%;
 }
 .category:hover h2 {
   text-decoration: underline;
@@ -40,6 +41,11 @@
 .category img {
   width: 100%;
   display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 .category__content {
   position: absolute;
