--- a/src/components/NowPlaying/NowPlaying.module.css
+++ b/src/components/NowPlaying/NowPlaying.module.css
@@ -33,6 +33,9 @@
   align-items: center;
   cursor: pointer;
   margin-right: 18px;
+  background: transparent;
+  border: 0;
+  outline: 0;
 }
 .extra-controls-button:hover {
   color: white;
