--- a/src/components/Track/Track.module.css
+++ b/src/components/Track/Track.module.css
@@ -36,6 +36,10 @@
   height: 35px;
   justify-content: center;
 }
+.datagrid-cell-action img {
+  width: 15px;
+  height: 15px;
+}
 .datagrid-cell-title {
   flex: 1;
   color: white;
@@ -47,6 +51,12 @@
   text-overflow: ellipsis;
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
+}
+.datagrid-cell--playing {
+  color: #1db954;
+}
+.datagrid-cell--playing a {
+  color: #1db954;
 }
 
 .datagrid-cell-explicit,
@@ -209,6 +219,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
 .btn:disabled,
 .btn--selected:disabled {
   border: 2px solid #989898;
