showing if playlist/album from searchCard is playing

--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -42,7 +42,8 @@
   display: flex;
 }
 
-.search-card__action {
+.search-card__action,
+.search-card__action--active {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -50,6 +51,9 @@
   font-size: 19px;
   color: #989898;
   position: relative;
+}
+.search-card__action--active {
+  color: #32cf69;
 }
 
 .search-card__info {
@@ -59,7 +63,8 @@
   align-items: center;
   flex: 1;
 }
-.search-card__name {
+.search-card__name,
+.search-card__name--active {
   color: white;
   text-decoration: none;
   display: inline-block;
@@ -68,6 +73,9 @@
   text-overflow: ellipsis;
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
+}
+.search-card__name--active {
+  color: #32cf69;
 }
 .search-card__name:hover {
   text-decoration: underline;
@@ -226,6 +234,7 @@
 .card__owner a {
   color: #1db954;
 }
+
 .card__overlay {
   position: absolute;
   top: 0;
