--- a/src/components/PlaylistHeader/PlaylistHeader.module.css
+++ b/src/components/PlaylistHeader/PlaylistHeader.module.css
@@ -13,6 +13,7 @@
   box-shadow: 0 0 20px rgba(18, 18, 18, 0.3);
   padding-bottom: 250px;
   background: #282828;
+  align-self: start;
 }
 
 .img-container img {
