refactoring skipToCertainTrack functionality and making it better

--- a/src/components/NowPlaying/NowPlaying.module.css
+++ b/src/components/NowPlaying/NowPlaying.module.css
@@ -25,7 +25,8 @@
 }
 
 .extra-controls-button,
-.volume-bar__icon {
+.volume-bar__icon,
+.extra-controls-button--opened {
   color: #b3b3b3;
   font-size: 18px;
   display: flex;
