--- a/src/components/Queue/Queue.module.css
+++ b/src/components/Queue/Queue.module.css
@@ -7,6 +7,7 @@
   right: 0;
   bottom: 0;
 }
+
 .container::-webkit-scrollbar {
   width: 10px;
   background: transparent;
@@ -22,4 +23,9 @@
 .container::-webkit-scrollbar-thumb {
   background-color: darkgrey;
   border-radius: 50px;
+}
+.heading {
+  color: white;
+  font-size: 18px;
+  margin-bottom: 22px;
 }
