--- a/src/components/Queue/Queue.module.css
+++ b/src/components/Queue/Queue.module.css
@@ -6,6 +6,7 @@
   left: 0;
   right: 0;
   bottom: 0;
+  display: flex;
 }
 
 .container::-webkit-scrollbar {
@@ -28,4 +29,5 @@
   color: white;
   font-size: 18px;
   margin-bottom: 22px;
+  margin-top: 25px;
 }
